Translation review of andrea

--- a/ui/public/i18n/language.json
+++ b/ui/public/i18n/language.json
@@ -24,19 +24,19 @@
     "title": "Settings",
     "configure_instance": "Configure {instance}",
     "save": "Save",
-    "roundcubemail_fqdn": "Roundcubemail hostname (FQDN)",
+    "roundcubemail_fqdn": "Roundcube hostname (FQDN)",
     "lets_encrypt": "Request LE Certificate",
-    "http_to_https":"Force Https",
+    "http_to_https":"Force HTTPS",
     "mail_server_fqdn":"Mail server hostname (FQDN)",
     "encrypt_imap":"IMAP encryption",
-    "none":"none",
-    "starttls":"starttls",
-    "tls": "tls",
+    "none":"None",
+    "starttls":"STARTTLS",
+    "tls": "TLS",
     "imap_port": "IMAP TCP port",
     "encrypt_smtp":"SMTP encryption",
     "smtp_port":"SMTP TCP port",
-    "tls_verify_smtp": "Use a valid the certificate for smtp",
-    "tls_verify_imap": "Use a valid the certificate for imap",
+    "tls_verify_smtp": "Use a valid certificate for SMTP",
+    "tls_verify_imap": "Use a valid certificate for IMAP",
     "enabled": "Enabled",
     "disabled": "Disabled",
     "advanced": "Advanced",
@@ -45,12 +45,12 @@
     "upload_max_filesize_invalid_type":"Must be an integer",
     "smtp_port_invalid_type": "Must be a valid TCP port",
     "imap_port_invalid_type": "Must be a valid TCP port",
-    "test_imap":"IMAP validation",
-    "test_smtp":"SMTP validation",
+    "test_imap":"IMAP error",
+    "test_smtp":"SMTP error",
     "cannot_connect_to_server": "Cannot connect to server",
     "valid_certificate_verification_error":"The certificate is not valid for the hostname or self signed",
     "configuring": "Configuring",
-    "instance_configuration": "Roundcubemail configuration",
+    "instance_configuration": "Configure Roundcube",
     "placeholder_plugins":"Plugins list (comma separated: plugin1,plugin2,plugin3)",
     "choose": "Choose encryption"
   },
