--- a/ui/public/i18n/language.json
+++ b/ui/public/i18n/language.json
@@ -27,7 +27,7 @@
     "roundcubemail_fqdn": "Roundcube hostname (FQDN)",
     "lets_encrypt": "Request LE Certificate",
     "http_to_https": "Force HTTPS",
-    "mail_server_fqdn": "Mail server hostname",
+    "mail_server_fqdn": "Mail server",
     "enabled": "Enabled",
     "disabled": "Disabled",
     "advanced": "Advanced",
@@ -39,7 +39,7 @@
     "placeholder_plugins": "Plugins list (comma separated: plugin1,plugin2,plugin3)",
     "choose_mail_server": "Select a mail server as endpoint",
     "choose_the_mail_server_to_use": "Roundcube needs to connect to a mail server, select one in the list",
-    "mail_server_is_not_valid": "This mail server cannot be used by roundcube webmail"
+    "mail_server_is_not_valid": "This mail server cannot be used by Roundcube webmail"
   },
   "about": {
     "title": "About"
