--- a/ui/public/i18n/en/translation.json
+++ b/ui/public/i18n/en/translation.json
@@ -37,7 +37,7 @@
     "configuring": "Configuring",
     "instance_configuration": "Configure Roundcube",
     "placeholder_plugins": "Plugins list (comma separated: plugin1,plugin2,plugin3)",
-    "choose_mail_server": "Select a domain...",
+    "choose_mail_server": "Select a domain",
     "choose_the_mail_server_to_use": "Choose the domain suffix used for both identifying and initializing the user account and their mail address preferences",
     "mail_server_is_not_valid": "This mail server cannot be used by Roundcube webmail"
   },
