Update mail domain error messages

--- a/ui/public/i18n/en/translation.json
+++ b/ui/public/i18n/en/translation.json
@@ -41,8 +41,8 @@
     "choose_the_mail_server_to_use": "Choose the domain suffix used for both identifying and initializing the user account and their mail address preferences",
     "mail_server_is_not_valid": "This mail server cannot be used by Roundcube webmail",
     "upload_max_filesize_number_lte": "Must be less than 120 MB",
-    "no_available_mail_domain_check_users": "No available mail domain, please check if users are added from user domain",
-    "mail_module_misconfigured": "Mail module is misconfigured"
+    "no_available_mail_domain_check_users": "Make sure the mail domain you intend to use has \"Add user addresses from user domain\" checkbox enabled",
+    "mail_module_misconfigured": "No mail domain available"
   },
   "about": {
     "title": "About"
