Translation review of Andrea
Co-authored-by: Andrea Leardini <andre8244@gmail.com>

--- a/ui/public/i18n/en/translation.json
+++ b/ui/public/i18n/en/translation.json
@@ -36,8 +36,8 @@
     "upload_max_filesize_invalid_type": "Must be an integer",
     "configuring": "Configuring",
     "instance_configuration": "Configure Roundcube",
-    "Write_plugins_list": "Write plugins list (one plugin per line)",
-    "invalid_plugin": "Invalid plugin name : {plugin}",
+    "plugins_list": "Plugins list (one plugin per line)",
+    "invalid_plugin": "Invalid plugin name: {plugin}",
     "choose_mail_server": "Select a domain",
     "choose_the_mail_server_to_use": "Choose the domain suffix used for both identifying and initializing the user account and their mail address preferences",
     "mail_server_is_not_valid": "This mail server cannot be used by Roundcube webmail",
